--- a/style.css
+++ b/style.css
@@ -22,18 +22,16 @@ i:hover {
 
 
 #calculator {
-  height: 70%;
-  max-height: 700px;
-  min-height: 500px;
-  width: 30%;
-  max-width: 400px;
+  max-height: 800px;
+  min-height: 400px;
+  max-width: 600px;
   min-width: 250px;
   background-color: green;
-  padding: 2rem;
+  padding: 1.3rem;
   display: flex;
   flex-direction: column;
   gap: 5%;
-  border-radius: 3rem;
+  border-radius: 2rem;
 }
 
 #result-div {
@@ -61,8 +59,8 @@ i:hover {
   width: 94%;
   height: 49%;
   font-size: 2rem;
-  padding-bottom: 1%;
-  margin: 0% 3%;
+  padding-bottom: .4rem;
+  margin: 0 .7rem;
   overflow: hidden;
   text-align: end;
 }
@@ -103,4 +101,5 @@ button {
 
 #footer {
   color: white;
+  font-size: 0.8rem;
 }
